# ops-proxy

./: .env.example  .gitignore  README.md  WEB_RESEARCH_PLAN.md  com.openclaw.ops-proxy.plist  pyproject.toml
ops_proxy/: __init__.py  cli.py  config.py  http_client.py  notifier.py  rules.py  telegram.py  watcher.py
tests/: test_config.py  test_http_client.py  test_http_client_search.py  test_http_client_unified.py  test_notifier.py  test_rules.py  test_telegram.py  test_watcher.py
